Fixed color contrast issues

--- a/project/styles/siteplan.css
+++ b/project/styles/siteplan.css
@@ -30,11 +30,14 @@ img {
 
 .green {
     color: var(--main-color);
-    
+    background-color: black;
+    border-radius: 10px;
     text-shadow: black 1px 1px 2px;
 }
 
 .pink {
     color: var(--secondary-color);
+    background-color: black;
+    border-radius: 10px;
     text-shadow: black 1px 1px 2px;
 }
